--- a/styles/globals.css
+++ b/styles/globals.css
@@ -17,14 +17,25 @@
 }
 
 body {
-
 }
 
-
-.main-bg { background: url(../public/images/11.jpg) no-repeat center center; background-size: cover; width: 100%; height: 100vh;}
-.card {
-  @apply shadow-lg bg-gray-100 rounded
+.main-bg {
+  background: url(../public/images/11.jpg) no-repeat center center;
+  background-size: cover;
+  width: 100%;
+  height: 100vh;
 }
-.card img{ 
-  @apply  rounded-t
+
+/* Component */
+@import "./modal.css";
+@import "./card.css";
+
+/* Page */
+@import "./pages/faq.css";
+
+.mainSubscriptionBg {
+  background-color: #e5e7eb
+}
+.subscriptionBg {
+  background-color: #dee2e6
 }
